traffic-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: traffic-generator
  namespace: development
spec:
  containers:
  - name: alpine
    image: alpine
    args:
    - sleep
    - "100000000"
